--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
+@keyframes spawn {
+  from {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes like {
   0% {
     background-size: 0%;
