--- a/assets/scss/utils/_animations.scss
+++ b/assets/scss/utils/_animations.scss
@@ -1,3 +1,9 @@
+@keyframes spawn {
+    from { opacity: 0; }
+    30% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 @keyframes like {
     0% { 
         background-size: 0%;
