--- a/assets/css/pages/restaurants.css
+++ b/assets/css/pages/restaurants.css
@@ -9,6 +9,23 @@
     opacity: 1;
   }
 }
+@keyframes restaurants {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  10% {
+    transform: translate3d(0, 0, 0);
+  }
+  50% {
+    transform: translate3d(-350px, 0, 0);
+  }
+  60% {
+    transform: translate3d(-350px, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
 @keyframes like {
   0% {
     background-size: 0%;
@@ -71,7 +88,13 @@
 }
 .restaurant-bg {
   width: 100%;
-  max-height: 320px;
+  max-height: 275px;
+  object-fit: cover;
+  overflow: hidden;
+}
+.restaurant-bg img {
+  width: 100%;
+  max-height: 275px;
   object-fit: cover;
 }
 
@@ -181,10 +204,31 @@ section.third {
     margin-left: 24px;
   }
 }
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .restaurant-bg img {
+    max-height: 360px;
+  }
+}
 @media (min-width: 1200px) {
   .container {
-    max-width: 1024px;
-    padding: 2em 20em;
+    width: 80%;
+    max-width: 1400px;
+    padding: 2em 0;
+  }
+  section {
+    padding: 0 10em;
+  }
+  .restaurant-bg {
+    max-height: 360px;
+  }
+  .restaurant-bg img {
+    max-height: 1056px;
+    position: relative;
+    top: -269px;
+    aspect-ratio: 16/9;
   }
 }
 
