--- a/assets/scss/pages/homepage.scss
+++ b/assets/scss/pages/homepage.scss
@@ -50,6 +50,8 @@ section.working {
             font-weight: 500;
 
             i.step-icon {
+                width: 24px;
+                text-align: center;
                 margin-right: 23px;
             }
     
@@ -143,10 +145,60 @@ section.restaurants {
 
                 .like {
                     text-align: right;
+
+                    .checked {
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        -webkit-text-stroke-width: 0px;
+                        background-repeat: no-repeat;
+                        background-image: linear-gradient(200.64deg, v.$primary -5.2%, v.$secondary 110.74%);
+                    }
                 }
                
             }
            
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .grid-steps, .grid-restaurants {
+        padding: 0 4em;
+    }
+
+    .grid-restaurants {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .grid-steps, .grid-restaurants {
+        padding: 0;
+    }
+
+    section.explore h2 {
+        font-size: 40px;
+    }
+
+    section.working {
+        padding: 2em 8em 4em;
+
+        .grid-steps {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+
+    section.restaurants {
+        padding: 2em 0 4em 8em;
+        overflow: hidden;
+
+        .grid-restaurants {
+            grid-template-columns: repeat(4, 1fr);
+
+            article.card {
+                width: 335px;
+                animation: restaurants 10s infinite linear;
+            }
         }
     }
 }
