--- a/assets/scss/utils/_animations.scss
+++ b/assets/scss/utils/_animations.scss
@@ -4,6 +4,14 @@
     100% { opacity: 1; }
 }
 
+@keyframes restaurants {
+    0% { transform: translate3d(0,0,0); }
+    10% { transform: translate3d(0,0,0); }
+    50% { transform: translate3d(-350px,0,0); }
+    60% { transform: translate3d(-350px,0,0); }
+    100% { transform: translate3d(0,0,0); }
+}
+
 @keyframes like {
     0% { 
         background-size: 0%;
