--- a/assets/css/pages/restaurants.css
+++ b/assets/css/pages/restaurants.css
@@ -122,6 +122,12 @@ section.third {
   display: flex;
   align-items: center;
 }
+.container .name h2 {
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 28px;
+}
 .container .name .like {
   position: absolute;
   right: 41px;
@@ -131,10 +137,13 @@ section.third {
   text-align: center;
   margin: 2.5em 0 1.5em;
 }
-.container section h4 {
-  margin-bottom: 5px;
-}
 .container section h3 {
+  margin-bottom: 5px;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.container section h4 {
   font-weight: 500;
   grid-column: 1/3;
 }
