--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -22,16 +22,10 @@ h1 {
     font-size: 28px;
 }
 
-h3 {
+h3, h4 {
     font-size: 18px;
     margin: 0;
     padding: 0;
-}
-
-h4 {
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 16px;
 }
 
 button.gradient-button {
