--- a/assets/scss/pages/restaurants.scss
+++ b/assets/scss/pages/restaurants.scss
@@ -31,6 +31,13 @@ section.third { animation: spawn 6s; }
         display: flex;
         align-items: center;
 
+        h2 {
+            font-family: 'Shrikhand';
+            font-style: italic;
+            font-weight: normal;
+            font-size: 28px;
+        }
+
         .like {
             position: absolute;
             right: 41px;
@@ -45,11 +52,14 @@ section.third { animation: spawn 6s; }
 
     section {
         
-        h4 {
+        h3 {
             margin-bottom: 5px;
+            font-weight: 300;
+            text-transform: uppercase;
+            font-size: 16px;
         }
 
-        h3 {
+        h4 {
             font-weight: 500;
             grid-column: 1/3;
         }
