fix: détail mineur

--- a/assets/scss/pages/homepage.scss
+++ b/assets/scss/pages/homepage.scss
@@ -203,8 +203,8 @@ section.restaurants {
             margin-top: 2em;
 
             article.card {
-                width: 335px;
-                animation: restaurants 10s infinite;
+                // width: 335px;
+                // animation: restaurants 10s infinite;
             }
         }
     }
